k8s/mongodb-tech-challenge-ms-producao.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
  annotations:
    author: G8 - 3SOAT/2023
    name: tech-challenge-ms-producao-db-service
    description: "This is the MongoDB database service for Tech Challenge"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          resources:
            limits:
              memory: "300Mi"
              cpu: "100m"
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 60
            periodSeconds: 10
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db # Caminho onde os dados serão armazenados no contêiner
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: "TCP"
      port: 27017
      targetPort: 27017
