k8s/postgres-tech-challenge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
  annotations:
    author: G8 - 3SOAT/2023
    name: tech-challenge-db-service
    description: "This is the postgres database service for Tech Challenge"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
          - containerPort: 5432
            protocol: TCP
        resources:
          limits:
            memory: "300Mi"
            cpu: "100m"
        readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 10
        livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            periodSeconds: 10
        volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/tech-challenge/postgresql/data # Caminho onde os dados serão armazenados no contêiner
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc # Nome do PersistentVolumeClaim (PVC) associado ao pod
---

apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: "TCP"
      port: 5432
      targetPort: 5432
